# Syncterra

./: .dockerignore  .gitignore  README.jp.md  README.md  README_en.md  asyncapi.yaml  backend.spec  inspect_excel_settings.py  openapi.json  pyproject.toml  run_backend.py
backend/: main.py
backend/api/: album_art.py  playlists.py  settings.py  system.py  tracks.py  websocket.py
backend/core/: album_art_scanner.py  scanner.py  syncer.py
backend/db/: albumart_database.py  albumart_models.py  database.py  models.py
docker/: docker-compose.sample.yml  docker-compose.test.yml  docker-compose.yml
docker/backend/: Dockerfile  entrypoint.sh
docker/frontend/: Dockerfile  nginx.conf
docker/rsync/: Dockerfile  entrypoint.sh
electron/: .gitignore  README.md  main.ts  package-lock.json  package.json  preload.ts  tsconfig.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  index.ts  types.ts  useWebSocket.ts
frontend/src/features/audio-list/: AudioListPage.tsx  ProcessLogDrawer.tsx  TrackDataGrid.tsx  mockData.ts
frontend/src/features/playlists/: PlaylistPage.tsx
frontend/src/features/settings/: SettingsPage.tsx
frontend/src/features/sync/: SyncContext.tsx
frontend/src/types/: electron.d.ts  settings.ts  track.ts
scripts/: export_openapi.py
src/audiosync/: app.py  audio_list.bat  audio_list.py  audio_list.sh  audio_list_all.bat  audio_scan.py  audio_sync.bat  audio_sync.py  audio_sync.sh  audio_sync_data.py  audio_sync_rsync.py  audio_sync_rsync.sh  audio_sync_test.py  audio_synchronize.py  audio_synchronizer.py  database.py  logger.py  migrate_from_excel.py  rsync_audio_synchronizer.py  sample_AudioSyncData.xlsx  schema.sql
tests/: TEST_CASES.md  TEST_STRATEGY.md  test_docs.py  test_scanner.py  test_scanner_progress.py  test_settings.py  test_syncer.py  test_system.py  test_system_sync.py  test_tracks.py  test_websocket.py
tests/integration/: conftest.py  test_album_art_api_integration.py  test_api_flow.py  test_api_integration.py  test_docs.py  test_ftp_sync.py  test_playlists.py  test_playlists_flow.py  test_scanner.py  test_scanner_flow.py  test_scanner_integration.py  test_scanner_progress.py  test_settings.py  test_syncer.py  test_syncer_flow.py  test_syncer_flow_ftp.py  test_syncer_integration.py  test_system.py  test_system_sync.py  test_track_deletion.py  test_tracks.py  test_websocket.py
tests/unit/: test_album_art_api_unit.py  test_album_art_scanner.py  test_delete_missing_unit.py  test_metadata_fields.py  test_playlists_unit.py  test_scanner_size_unit.py  test_syncer_unit.py
