[project]
name = "audiosync"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "mutagen>=1.47.0",
    "openpyxl>=3.1.5",
    "adbutils>=2.8.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/audiosync"]
