[project]
name = "audiosync"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "mutagen>=1.47.0",
    "openpyxl>=3.1.5",
    "adbutils>=2.8.0",
    "fastapi>=0.124.0",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.44",
    "aiosqlite>=0.21.0",
    "websockets>=15.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/audiosync"]

[tool.rye.scripts]
test = { cmd = "pytest" }
lint = { cmd = "ruff check ." }
format = { cmd = "ruff format ." }
check = { cmd = "sh -c 'ruff check . && ruff format --check . && pytest'" }

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841", "E402"]
