[project]
name = "syncterra"
version = "0.1.0"
description = "Audio file synchronization tool for various devices"
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
    "mutagen>=1.47.0",
    "openpyxl>=3.1.5",
    "adbutils>=2.8.0",
    "fastapi>=0.124.0",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.44",
    "aiosqlite>=0.21.0",
    "websockets>=15.0.1",
    "Pillow>=10.0.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
    "pyftpdlib>=2.1.0",
    "pyinstaller>=6.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/audiosync"]



[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841", "E402"]
